comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
     <head>
-        <h1> Titulo do Site</h1>
+        <h1>Cursos Gratis</h1>
     </head>
     <article>
-        <h2>Artigo 001</h2>
-        <p>Texto do Artigo 001</p>
+        <h2>Curso de HTML5 com CSS3</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam vitae animi facere, explicabo sapiente alias perferendis voluptate officia molestiae impedit praesentium veritatis beatae atque nihil eligendi doloribus expedita enim adipisci?</p>
     </article>
     <article>
-        <H2>Artigo 002</H2>
-        <p>Texto do Artigo 002</p>
+        <H2>Curso de JavaScript</H2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio, et quae, ea sit aliquid dolores error unde fuga inventore similique dolore odit, dicta accusantium non quidem atque expedita! Voluptatibus, optio?</p>
     </article>
     </main>
 </body>
